--- a/static/index.html
+++ b/static/index.html
@@ -1,23 +1,40 @@
 <!doctype html>
-<title>tty.js</title>
-<link rel="stylesheet" href="style.css">
-<link rel="stylesheet" href="user.css">
 
-<h1>tty.js</h1>
+<head>
+    <title>tty.js</title>
+    <link rel="stylesheet" href="style.css">
+    <!--<link rel="stylesheet" href="user.css">-->
 
-<div id="help">
-  <p>Click the titlebar to drag.</p>
-  <p>Double-click titlebar to maximize.</p>
-  <p>Click the lower-right corner to resize.</p>
-  <p>Click the tilde to open a new tab.</p>
-  <p>Click the tilde with a modifier to close the window.</p>
-</div>
+    <h1>tty.js</h1>
 
-<button id="open">Open Terminal</button>
-<button id="lights">Light Switch</button>
+    <div id="help">
+        <p>Click the titlebar to drag.</p>
+        <p>Double-click titlebar to maximize.</p>
+        <p>Click the lower-right corner to resize.</p>
+        <p>Click the tilde to open a new tab.</p>
+        <p>Click the tilde with a modifier to close the window.</p>
+    </div>
 
-<script src="socket.io/socket.io.js"></script>
-<script src="term.js"></script>
-<script src="options.js"></script>
-<script src="tty.js"></script>
-<script src="user.js"></script>
+    <button id="open">Open Terminal</button>
+    <button id="lights">Light Switch</button>
+    <script src="jquery-3.1.1.min.js"></script>
+    <script src="socket.io/socket.io.js"></script>
+    <!--  config.js:
+    window.initConfig = [{
+    x: 0,
+    y: 0,
+    path: "~/Nutstore/github/ui-test/",
+    tabs: [{}, {
+        cmds: ["gulp"]
+    }]}] -->
+    <script src="config.js"></script>
+    <script src="term.js"></script>
+    <script src="options.js"></script>
+    <script src="tty.js"></script>
+</head>
+
+<body>
+
+</body>
+
+<!--<script src="user.js"></script>-->
